--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -76,7 +76,6 @@ body {
 }
 
 header {
-	background-color: #68cc92;
     display: inline-block;
     height: auto;
     position: relative;
@@ -84,7 +83,6 @@ header {
     width: 100%;
     opacity: 0.5;
 }
-
 
 #mask {
 	background-color: #000;
@@ -107,6 +105,11 @@ header {
 	width: auto; 
 	height: auto;
 	z-index: -100;
+	iframe {
+		height: 100vh;
+		width: 100%;
+		transform: scale(1.4);
+	}
 }
 
 // contador
